# tts-idk

./: .gitignore  README.md  demo_streaming_tts.py  inference.py  prepare_training_data.py  pyproject.toml  train.py  train_ddp.py  train_tokenizer.py
assets/: experiment_1.txt  vi_wikipedia_bbpe_2048_copy.json
configs/: inference.default.json  train.default.json
model/: __init__.py  baselines.py  chunkers.py  config.py  io.py  llm.py  schemas.py  streaming_tts.py
model/components/: __init__.py  attention.py  decoder_block.py  mha.py  moss.py  positional_encoding.py  postnet.py
tests/: test_chunkers.py  test_llm_sequence.py  test_postnet.py  test_streaming_tts.py
